# depths-of-dread

./: .gitignore  LICENSE  README.md  conftest.py  dungeon.py  lint.sh  pyproject.toml  test-quick.sh
docs/: AGENTIC_TESTING_RESEARCH_REPORT.md  AGENT_MODE.md  CODE_QUALITY_AUDIT.md  DND_RPG_RESEARCH.md  DREAD_BALANCE_ANALYSIS.md  DUNGEON_CODE_REVIEW.md  EXPERT_SECURITY_AUDIT.md  FEATURE_INVENTORY.md  GAME_EXPANSION_RESEARCH.md  RETRO_GAME_DEV_RESEARCH.md  ROGUELIKE_RESEARCH_REPORT.md  STRATIFIED_TESTING_DESIGN.md
src/depths_of_dread/: __init__.py  __main__.py  agent.py  agent_ui.py  bot.py  combat.py  constants.py  entities.py  exceptions.py  floor_gen.py  game.py  items.py  mapgen.py  persistence.py  ui.py
tests/: conftest.py  test_bot.py  test_branches.py  test_combat.py  test_entities.py  test_game.py  test_game_integration.py  test_items.py  test_mapgen.py  test_persistence.py  test_quality.py  test_ui.py
