[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depths-of-dread"
version = "1.0.0"
description = "A terminal roguelike dungeon crawler with BSP dungeons, shadowcasting FOV, stealth, dungeon branches, and bestiary"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Will Rompf"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Role-Playing",
]
keywords = ["roguelike", "dungeon", "crawler", "terminal", "curses", "game"]

[project.scripts]
depths-of-dread = "depths_of_dread.game:main"

[project.urls]
Homepage = "https://github.com/willrompf/depths-of-dread"
Repository = "https://github.com/willrompf/depths-of-dread"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
